fix typo in .tmux/.tmux.conf

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -88,7 +88,7 @@ if-shell "[[ `tmux -V` == *1.9* ]]" 'unbind c; bind c new-window -c "#{pane_curr
 if-shell "[[ `tmux -V` == *1.9* ]]" 'unbind s; bind s split-window -v -c "#{pane_current_path}"'
 if-shell "[[ `tmux -V` == *1.9* ]]" "unbind '\"'; bind '\"' split-window -v -c '#{pane_current_path}'"
 if-shell "[[ `tmux -V` == *1.9* ]]" 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
-if-shell "[[ `tmux -V` == *1.9* ]]" 'unbsnd %; bind % split-window -h -c "#{pane_current_path}"'
+if-shell "[[ `tmux -V` == *1.9* ]]" 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
 
 # make the first window number start at 1
 set -g base-index 1
