--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,23 +1,36 @@
 tap "crisidev/chunkwm"
+tap "eddieantonio/eddieantonio"
 tap "homebrew/bundle"
 tap "homebrew/cask"
-tap "homebrew/cask-fonts"
 tap "homebrew/core"
-tap "homebrew/services"
-tap "koekeishiya/formulae"
-brew "bash-completion"
-brew "dep"
-brew "fasd"
-brew "git-crypt"
-brew "ipcalc"
-brew "kube-ps1"
-brew "kubectx", args: ["with-short-names"]
-brew "siege"
+tap "romkatv/powerlevel10k"
+brew "aws-iam-authenticator"
+brew "sqlite"
+brew "awscli"
+brew "certbot"
+brew "go"
+brew "gomplate"
+brew "helm"
+brew "helm@2"
+brew "helmfile"
+brew "hey"
+brew "jq"
+brew "kubernetes-cli"
+brew "kustomize"
+brew "minikube"
+brew "openjdk"
+brew "pyenv"
+brew "python@3.8"
+brew "repo"
+brew "sops"
 brew "stern"
+brew "telnet"
+brew "terraform"
+brew "tree"
+brew "watch"
 brew "wget"
 brew "yarn"
-brew "crisidev/chunkwm/chunkwm"
-brew "koekeishiya/formulae/skhd"
-cask "font-hack-nerd-font"
-cask "minikube"
-cask "spotmenu"
+brew "eddieantonio/eddieantonio/imgcat"
+brew "romkatv/powerlevel10k/powerlevel10k"
+cask "gpg-suite"
+cask "java"
