Update homebrew pkg

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -3,6 +3,7 @@ tap "eddieantonio/eddieantonio"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "knative/client"
 tap "romkatv/powerlevel10k"
 brew "aws-iam-authenticator"
 brew "sqlite"
@@ -15,10 +16,10 @@ brew "helm@2"
 brew "helmfile"
 brew "hey"
 brew "jq"
+brew "kind"
 brew "kubernetes-cli"
 brew "kustomize"
 brew "minikube"
-brew "openjdk"
 brew "pyenv"
 brew "python@3.8"
 brew "repo"
@@ -31,6 +32,7 @@ brew "watch"
 brew "wget"
 brew "yarn"
 brew "eddieantonio/eddieantonio/imgcat"
+brew "knative/client/kn"
 brew "romkatv/powerlevel10k/powerlevel10k"
 cask "gpg-suite"
-cask "java"
+cask "oracle-jdk"
