--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,38 +1,137 @@
+tap "arttor/tap"
 tap "crisidev/chunkwm"
+tap "derailed/k9s"
 tap "eddieantonio/eddieantonio"
+tap "gabrie30/utils"
+tap "hashicorp/tap"
 tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "homebrew/core"
+tap "homebrew/services"
 tap "knative/client"
 tap "romkatv/powerlevel10k"
+tap "weaveworks/tap"
+brew "xz"
+brew "argocd", link: false
 brew "aws-iam-authenticator"
-brew "sqlite"
 brew "awscli"
+brew "python@3.10"
+brew "azure-cli"
+brew "boost"
 brew "certbot"
+brew "folly"
+brew "edencommon"
+brew "fizz"
+brew "wangle"
+brew "fbthrift"
+brew "fb303"
+brew "fzf"
+brew "libavif"
+brew "gd"
+brew "gdk-pixbuf"
+brew "git"
 brew "go"
 brew "gomplate"
+brew "netpbm"
+brew "harfbuzz"
+brew "pango"
+brew "librsvg"
+brew "graphviz"
+brew "grep"
 brew "helm"
 brew "helm@2"
 brew "helmfile"
 brew "hey"
+brew "imagemagick"
+brew "infracost"
+brew "jira-cli"
 brew "jq"
+brew "jsonnet"
 brew "kind"
 brew "kubernetes-cli"
 brew "kustomize"
+brew "libidn2"
 brew "minikube"
+brew "node", link: false
+brew "mongodb-atlas-cli"
+brew "mysql@5.6"
+brew "nghttp2"
+brew "packer"
+brew "postgresql@14"
+brew "powerlevel10k"
 brew "pyenv"
 brew "python@3.8"
+brew "python@3.9"
 brew "repo"
+brew "s3cmd"
+brew "slides"
 brew "sops"
 brew "stern"
 brew "telnet"
 brew "terraform"
 brew "tree"
 brew "watch"
+brew "watchman"
 brew "wget"
-brew "yarn"
+brew "yarn", link: false
+brew "yq"
+brew "arttor/tap/helmify"
+brew "derailed/k9s/k9s"
 brew "eddieantonio/eddieantonio/imgcat"
+brew "gabrie30/utils/ghorg"
+brew "hashicorp/tap/vault"
 brew "knative/client/kn"
-brew "romkatv/powerlevel10k/powerlevel10k"
+brew "weaveworks/tap/eksctl"
+cask "caffeine"
+cask "google-cloud-sdk"
 cask "gpg-suite"
 cask "oracle-jdk"
+vscode "amazonwebservices.aws-toolkit-vscode"
+vscode "aws-scripting-guy.cform"
+vscode "bmewburn.vscode-intelephense-client"
+vscode "DavidAnson.vscode-markdownlint"
+vscode "eamodio.gitlens"
+vscode "ecmel.vscode-html-css"
+vscode "everettjf.filter-line"
+vscode "felipecaputo.git-project-manager"
+vscode "GitHub.copilot"
+vscode "GitHub.copilot-chat"
+vscode "GitLab.gitlab-workflow"
+vscode "golang.go"
+vscode "hashicorp.terraform"
+vscode "Infracost.infracost"
+vscode "JayBarnes.chatgpt-vscode-plugin"
+vscode "jinliming2.vscode-go-template"
+vscode "mhutchie.git-graph"
+vscode "mohsen1.prettify-json"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-kubernetes-tools.vscode-kubernetes-tools"
+vscode "ms-python.isort"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode-remote.remote-containers"
+vscode "owenfarrell.vscode-vault"
+vscode "PascalReitermann93.vscode-yaml-sort"
+vscode "redhat.java"
+vscode "redhat.vscode-commons"
+vscode "redhat.vscode-knative"
+vscode "redhat.vscode-xml"
+vscode "redhat.vscode-yaml"
+vscode "shd101wyy.markdown-preview-enhanced"
+vscode "Tim-Koehler.helm-intellisense"
+vscode "tonybaloney.vscode-pets"
+vscode "tsandall.opa"
+vscode "VisualStudioExptTeam.intellicode-api-usage-examples"
+vscode "VisualStudioExptTeam.vscodeintellicode"
+vscode "vscjava.vscode-java-debug"
+vscode "vscjava.vscode-java-dependency"
+vscode "vscjava.vscode-java-pack"
+vscode "vscjava.vscode-java-test"
+vscode "vscjava.vscode-maven"
+vscode "wholroyd.jinja"
+vscode "withfig.fig"
+vscode "yzane.markdown-pdf"
+vscode "ZainChen.json"
